# savemonstera

./: .env  README.md  database.py  generate_docx.py  main.py  pyproject.toml  requirements.txt  test_all.py
app/app_utils/: .requirements.txt
routers/: ai_agent.py  auth.py  dashboard.py  expenses.py  export.py  settings.py  upload.py
static/css/: style.css
static/js/: app.js
templates/: add_expense.html  dashboard.html  history.html  login.html  register.html  settings.html  terms.html
